--- a/style.css
+++ b/style.css
@@ -3,26 +3,26 @@
     border: 1px solid red;
     font-family: 'Oswald', sans-serif;
     text-align: center;
-    margin: auto;
 }
 
 #title {
     background: yellow;
-    padding: 45px 50px 45px 50px;
-    margin: 25px 100px;
+    padding: 20px 50px 20px 50px;
+    width:410px;
+    margin:20px auto;
 }
 
 #subtitle {
     background: black;
     color: white;
-    padding: 20px 50px 20px 50px;
-    margin: 5px 100px;
+    margin: 50px auto;
+    padding: 5px 60px;
+    width: 400px;
 }
 
 .topic {
     background: lightgray;
-    height: 25px;
-    width: 100px;
-    margin: 30px 30px 50px 30px;
+    width: 90px;
+    margin: 0px 30px 60px 30px;
     display: inline-block;
 }
